--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -10,8 +10,15 @@ endif()
 function(make_example target)
     add_executable(${target} ${target}.cpp)
     if(MSVC)
+        set_target_properties(${target} PROPERTIES MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
         target_compile_options(${target} PRIVATE /utf-8)
         target_compile_options(${target} PRIVATE /permissive-)
+        # 支持win7
+        add_definitions(-D_WIN32_WINNT=0x0601)
+        add_definitions(-DWINVER=0x0601)
+    endif()
+    if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+        target_link_options(${target} PRIVATE -static-libgcc -static-libstdc++)
     endif()
     set_target_properties(${target} PROPERTIES CXX_EXTENSIONS OFF)
     target_compile_features(${target} PRIVATE cxx_std_17)
